Created two new LaTeX commands for improving the layout of user functions in the relax manual.
These are \ufsep and \ufus which will be used to format the user function separator character and
the underscore character respectively.  They are used in the \uf{} commands to add the
'.\linebreak[0]' and '\_\linebreak[0]' text to allow for improved and consistent line breaking.

--- a/docs/latex/consistency_tests.tex
+++ b/docs/latex/consistency_tests.tex
@@ -262,7 +262,7 @@ calc()
 monte_carlo.error_analysis()
 \end{lstlisting}
 
-In this case, the \uf{monte\_carlo.initial\_values} user function call is not required.
+In this case, the \uf{monte\ufus{}carlo\ufsep{}initial\ufus{}values} user function call is not required.
 
 
 % Visualisation and data output.
@@ -271,7 +271,7 @@ In this case, the \uf{monte\_carlo.initial\_values} user function call is not re
 \section{Consistency testing script mode -- visualisation and data output}
 \label{sec: Visualisation and data output}
 
-The rest of the script is used to output the results to 2D Grace files for visualisation (the \uf{grace.view} user function calls will launch Grace with the created files), and the output of the values into plain text files.
+The rest of the script is used to output the results to 2D Grace files for visualisation (the \uf{grace\ufsep{}view} user function calls will launch Grace with the created files), and the output of the values into plain text files.
 
 However, simply visualizing the calculated $J(0)$, $F_\eta$, and $F_{R_2}$ values this way does not allow proper consistency testing. Indeed, for assessing the consistency of relaxation data using these tests, different methods exist to compare values calculated from one field to another.  These include correlation plots and histograms, and calculation of correlation, skewness and kurtosis coefficients.
 
