--- a/docs/latex/model-free.tex
+++ b/docs/latex/model-free.tex
@@ -640,7 +640,7 @@ state.save('save', force=True)
 The above script consists of three major sections:
 
 \begin{description}
-\item[Loading of data] Firstly a data pipe called \promptstring{m4} is created to hold all of the analysis data.  Then the $^{15}$N spin system data consisting of molecule, residue, and spin information is loaded into relax from the columns of the \file{noe.500.out} file, assuming that only residue numbers and names are present and are in the first and second columns respectively.  The options of this \uf{sequence.read} user function allow the molecule name, residue number, residue name, spin number, or spin name columns to be specified if desired.  The $^{15}$N spin is then set up using the \uf{spin} user functions.  The next part is to load all of the relaxation data, to set up the initial diffusion tensor, create the $^1$H spins required for the magnetic dipole-dipole interaction, and to set up the magnetic dipole-dipole and CSA relaxation mechanisms.  Finally the model-free model \promptstring{m4} is chosen.
+\item[Loading of data] Firstly a data pipe called \promptstring{m4} is created to hold all of the analysis data.  Then the $^{15}$N spin system data consisting of molecule, residue, and spin information is loaded into relax from the columns of the \file{noe.500.out} file, assuming that only residue numbers and names are present and are in the first and second columns respectively.  The options of this \uf{sequence\ufsep{}read} user function allow the molecule name, residue number, residue name, spin number, or spin name columns to be specified if desired.  The $^{15}$N spin is then set up using the \uf{spin} user functions.  The next part is to load all of the relaxation data, to set up the initial diffusion tensor, create the $^1$H spins required for the magnetic dipole-dipole interaction, and to set up the magnetic dipole-dipole and CSA relaxation mechanisms.  Finally the model-free model \promptstring{m4} is chosen.
 \item[Optimisation] The optimisation of model-free models requires an initial grid search to find a position close to the minimum, followed by the high precision Newton optimisation together with the Method of Multipliers constraint algorithm \citep{dAuvergneGooley08a}.  Errors are propagated from the relaxation data to the model-free parameters via Monte Carlo simulations which is a multi-step process in relax (designed for flexibility and to teach how the simulations are constructed and carried out).
 \item[Data output] The last stage consists of writing out the XML formatted results file which contains all of the data in the current data pipe, as well as the XML formatted save file which contains not only the current data pipe data but all of the relax data store data.  Both files can be loaded back into relax later on.
 \end{description}
@@ -795,7 +795,7 @@ These three sample scripts describe the basic components of model-free analysis.
 
 By presenting a systematic methodology for obtaining a consistent model-free description of the dynamics of the system, the manuscript of \citet{Mandel95} revolutionised the application of model-free analysis.  The full protocol is presented in Figure~\ref{fig: Mandel et al.}.
 
-All of the data analysis techniques required for this protocol can be implemented within relax.  The chi-squared distributions required for the chi-squared tests are constructed by Modelfree4 from the Monte Carlo simulations.  If the optimisation algorithms and Monte Carlo simulations built into relax are utilised, then the relax script will need to construct the chi-squared distributions from the results as this is not yet coded into relax.  The specific step-up hypothesis testing model selection of \citet{Mandel95} is available through the \uf{model\_selection} user function.  Coding the rest of the protocol into a script should be straightforward.
+All of the data analysis techniques required for this protocol can be implemented within relax.  The chi-squared distributions required for the chi-squared tests are constructed by Modelfree4 from the Monte Carlo simulations.  If the optimisation algorithms and Monte Carlo simulations built into relax are utilised, then the relax script will need to construct the chi-squared distributions from the results as this is not yet coded into relax.  The specific step-up hypothesis testing model selection of \citet{Mandel95} is available through the \uf{model\ufus{}selection} user function.  Coding the rest of the protocol into a script should be straightforward.
 
 To implement this analysis, a number of scripts would need to be written.  There is no sample script in relax for performing this analysis.  The simple sample scripts from above would need to be extended.  For example a starting script for determining the initial diffusion tensor estimates based on the R1/R2 ratio of \citet{Kay89} would have to be written.  The tensor from this script could then be feed into the \file{model\osus{}free\ossep{}mf\osus{}multimodel.py} script, followed by the \file{model\osus{}free\ossep{}modsel.py} script, and then a third script written to optimise the diffusion tensor.  A master script could be written first run the initial diffusion tensor script, then to iteratively execute the last three scripts until convergence, and finally to select the best diffusion model (see Figure~\ref{fig: Mandel et al.}).  Alternatively, these could all be combined into one super script.
 
@@ -1200,7 +1200,7 @@ pipe.create(name, 'mf', bundle=pipe_bundle)
 
 Firstly a data pipe bundle name is created containing the date and time at the point the script is first executed.  This pipe bundle is used to group together all of the data pipes created automatically by the protocol.  See section~\ref{sect: data pipe bundles} on page~\pageref{sect: data pipe bundles} for more details.
 
-The data pipe name used for this initial setup is set to \pycode{origin - mf (x)} where \pycode{x} is the data and time again.  This name is unique and will not clash with the data pipes created within the protocol.  The \uf{pipe.create} command will create the data pipe and add it to a new pipe bundle.
+The data pipe name used for this initial setup is set to \pycode{origin - mf (x)} where \pycode{x} is the data and time again.  This name is unique and will not clash with the data pipes created within the protocol.  The \uf{pipe\ufsep{}create} command will create the data pipe and add it to a new pipe bundle.
 
 
 % Spin systems.
@@ -1247,7 +1247,7 @@ spin.isotope('15N', spin_id='@N*')
 sequence.attach_protons()
 \end{lstlisting}
 
-To use this, you will need to place comments (the \pycode{\#} character) in front of the previous \uf{structure.read\_pdb}, \uf{structure.load\_spins} and \uf{spin.isotope} user functions.  Then uncomment the \uf{sequence.\linebreak[0]{}read}, \uf{spin.\linebreak[0]{}element}, \uf{spin.\linebreak[0]{}isotope} and \uf{sequence.\linebreak[0]{}attach\linebreak[0]{}\_protons} user functions.  The $^{15}$N spins will be extracted from the \file{noe.500.out} file.  The \uf{spin.\linebreak[0]{}element} and \uf{spin.\linebreak[0]{}isotope} user functions set the information required for relax to understand which relaxation mechanisms are active.  Finally the \uf{sequence.\linebreak[0]{}attach\linebreak[0]{}\_protons} user function will automatically attach protons to all nitrogen spin systems.  As this method is devoid of atomic positional information, the N-H bonds are absent and the diffusion models requiring structural information (the spheroids and ellipsoid) must be skipped.
+To use this, you will need to place comments (the \pycode{\#} character) in front of the previous \uf{structure\ufsep{}read\ufus{}pdb}, \uf{structure\ufsep{}load\ufus{}spins} and \uf{spin\ufsep{}isotope} user functions.  Then uncomment the \uf{sequence\ufsep{}read}, \uf{spin\ufsep{}element}, \uf{spin\ufsep{}isotope} and \uf{sequence\ufsep{}attach\ufus{}protons} user functions.  The $^{15}$N spins will be extracted from the \file{noe.500.out} file.  The \uf{spin\ufsep{}element} and \uf{spin\ufsep{}isotope} user functions set the information required for relax to understand which relaxation mechanisms are active.  Finally the \uf{sequence\ufsep{}attach\ufus{}protons} user function will automatically attach protons to all nitrogen spin systems.  As this method is devoid of atomic positional information, the N-H bonds are absent and the diffusion models requiring structural information (the spheroids and ellipsoid) must be skipped.
 
 
 % Loading the data.
@@ -1296,7 +1296,7 @@ interatom.set_dist(spin_id1='@N*', spin_id2='@H*', ave_dist=1.02 * 1e-10)
 interatom.unit_vectors()
 \end{lstlisting}
 
-The regular expression \pystring{@N*} and \pystring{@H*} cannot be used with the \uf{dipole\linebreak[0]{}\_pair.\linebreak[0]{}} define user function as otherwise \prompt{@N} spins will be connected to \prompt{@HE1} spins of the same tryptophan residue and \prompt{@H} spins to \prompt{@NE1} spins.  The average interatomic distance is set to 1.02 \AA ngstrom (though the \uf{dipole\linebreak[0]{}\_pair.\linebreak[0]{}set\linebreak[0]{}\_dist} user function expects the units of meters).  The \uf{dipole\linebreak[0]{}\_pair.\linebreak[0]{}unit\linebreak[0]{}\_vectors} is used to calculate the averaged unit vector between the two atoms.
+The regular expression \pystring{@N*} and \pystring{@H*} cannot be used with the \uf{dipole\ufus{}pair\ufsep{}} define user function as otherwise \prompt{@N} spins will be connected to \prompt{@HE1} spins of the same tryptophan residue and \prompt{@H} spins to \prompt{@NE1} spins.  The average interatomic distance is set to 1.02 \AA ngstrom (though the \uf{dipole\ufus{}pair\ufsep{}set\ufus{}dist} user function expects the units of meters).  The \uf{dipole\ufus{}pair\ufsep{}unit\ufus{}vectors} is used to calculate the averaged unit vector between the two atoms.
 
 Secondly the chemical shift anisotropy (CSA) relaxation mechanism is defined via the single command:
 
@@ -1546,7 +1546,7 @@ These messages are very important and will indicate to you if there are any prob
 \item Typing \shortcutkey{Shift+Ctrl+S} within the main relax window.
 \item Clicking on the \guibutton{Save as} button on the toolbar.
 \item Selecting the \guimenuitemthree{User functions}{state}{save} menu item.
-\item Opening up the relax prompt window with \guimenuitemtwo{View}{relax prompt} or \shortcutkey{Ctrl+P} and using the \uf{state.save} user function.
+\item Opening up the relax prompt window with \guimenuitemtwo{View}{relax prompt} or \shortcutkey{Ctrl+P} and using the \uf{state\ufsep{}save} user function.
 \end{itemize}
 
 If all the messages in the relax controller or \file{log} file appear to be fine and you have saved the current relax state, then click on \guibutton{Execute relax}.  This will start the calculations, freeze most of the GUI and open up the relax controller to give you feedback on the progress of the calculations:
