--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -102,6 +102,8 @@
 \newcommand{\software}[1]{\texttt{#1}}
 \newcommand{\no}{-}
 \newcommand{\yes}{\checkmark}
+\newcommand{\ufsep}{.\linebreak[0]}
+\newcommand{\ufus}{\_\linebreak[0]}
 
 % New environment.
 \newenvironment{exampleenv}{\footnotesize \begin{ttfamily} \sloppy}{\fussy \end{ttfamily}}
