--- a/docs/latex/curvefit.tex
+++ b/docs/latex/curvefit.tex
@@ -292,7 +292,7 @@ This user function will then create a relaxation exponential curve-fitting speci
 
 \subsection{Relax-fit script mode -- setting up the spin systems}
 
-The first thing which needs to be completed prior to any spin specific command is to generate the molecule, residue and spin data structures for storing the spin specific data.  In the sample script above this is generated from a PDB file, however a plain text file with the sequence information can be used instead (see the \uf{sequence.read} user function on page~\pageref{uf: sequence.read} for more details).  In the case of the sample script, the command
+The first thing which needs to be completed prior to any spin specific command is to generate the molecule, residue and spin data structures for storing the spin specific data.  In the sample script above this is generated from a PDB file, however a plain text file with the sequence information can be used instead (see the \uf{sequence\ufsep{}read} user function on page~\pageref{uf: sequence.read} for more details).  In the case of the sample script, the command
 
 \begin{lstlisting}[firstnumber=6]
 # Load the backbone amide 15N spins from a PDB file.
@@ -315,7 +315,7 @@ will generate the molecule, residue, and spin sequence for the current data pipe
 
 \subsection{Relax-fit script mode -- loading the data} \label{sect: Rx data loading}
 
-To load the peak intensities\index{peak!intensity} into relax the \uf{spectrum.read\_intensities} and \uf{relax\_fit.relax\_times} user functions are executed.  Important keyword arguments for these user functions are the file name and directory, the spectrum identification string and the relaxation time period of the experiment in seconds.  By default the file format will be automatically detected.  Currently Sparky\index{software!Sparky}, XEasy\index{software!XEasy}, NMRView\index{software!NMRView}, and generic columnar formatted peak lists are supported.  To be able to import any other type of format please send an email to the relax development mailing list\index{mailing list!relax-devel} with the details of the format.  Adding support for new formats is trivial.  The following series of commands -- an expansion of the \prompt{for} loop in the sample script -- will load peak intensities from six different relaxation periods, four of which have been duplicated, from Sparky peak lists with the peak heights in the 10$^\textrm{th}$ column.
+To load the peak intensities\index{peak!intensity} into relax the \uf{spectrum\ufsep{}read\ufus{}intensities} and \uf{relax\ufus{}fit\ufsep{}relax\ufus{}times} user functions are executed.  Important keyword arguments for these user functions are the file name and directory, the spectrum identification string and the relaxation time period of the experiment in seconds.  By default the file format will be automatically detected.  Currently Sparky\index{software!Sparky}, XEasy\index{software!XEasy}, NMRView\index{software!NMRView}, and generic columnar formatted peak lists are supported.  To be able to import any other type of format please send an email to the relax development mailing list\index{mailing list!relax-devel} with the details of the format.  Adding support for new formats is trivial.  The following series of commands -- an expansion of the \prompt{for} loop in the sample script -- will load peak intensities from six different relaxation periods, four of which have been duplicated, from Sparky peak lists with the peak heights in the 10$^\textrm{th}$ column.
 
 \begin{lstlisting}[numbers=none]
 spectrum.read_intensities('T2_ncyc1.list',   spectrum_id='1', int_col=10)
@@ -365,7 +365,7 @@ Note that the relaxation time period should be calculated directly from the puls
        GLY12N-HN    110.525      9.028        90144
 \end{verbatim}}
 
-By supplying the \keyword{int\_col} argument to the \uf{spectrum.read\_intensities} user function, this can be changed.  A typical XEasy file will look like:
+By supplying the \keyword{int\_col} argument to the \uf{spectrum\ufsep{}read\ufus{}intensities} user function, this can be changed.  A typical XEasy file will look like:
 
 {\scriptsize \begin{verbatim}
  No.  Color    w1      w2     ass. in w1     ass. in w2    Volume     Vol. Err.  Method  Comment
@@ -457,7 +457,7 @@ minimise('simplex', constraints=False)
 
 \subsection{Relax-fit script mode -- error analysis}
 
-Only one technique adequately estimates parameter errors when the parameter values where found by optimisation -- Monte Carlo simulations\index{Monte Carlo simulation}.  In relax this can be implemented by using a series of functions from the \uf{monte\_carlo} user function class.  Firstly the number of simulations needs to be set
+Only one technique adequately estimates parameter errors when the parameter values where found by optimisation -- Monte Carlo simulations\index{Monte Carlo simulation}.  In relax this can be implemented by using a series of functions from the \uf{monte\ufus{}carlo} user function class.  Firstly the number of simulations needs to be set
 
 \begin{lstlisting}[firstnumber=68]
 # Monte Carlo simulations.
@@ -690,4 +690,4 @@ To be sure that the data has been properly collected and that no instrumentation
 \caption[Peak intensity 2D plot xmgrace screenshot]{Screenshot of the 2D peak intensity plots for the exponential relaxation curves in Xmgrace.}\label{fig: screenshot: xmgrace peak intensities}
 \end{figure}
 
-Note that errors resulting in systematic bias in the data -- for example if temperature control (single-scan interleaving or temperature compensation blocks) or per-experiment/per-spectrometer temperature calibration on MeOH or ethylene glycol have not been performed -- will not be detected by looking at the decay curves.  See section~\ref{sect: temperature control and calibration} or the \uf{relax\_data.temp\_calibration} user function documentation on page~\pageref{uf: relax_data.temp_calibration} and the \uf{relax\_data.temp\_control} user function documentation on page~\pageref{uf: relax_data.temp_control} for more details.
+Note that errors resulting in systematic bias in the data -- for example if temperature control (single-scan interleaving or temperature compensation blocks) or per-experiment/per-spectrometer temperature calibration on MeOH or ethylene glycol have not been performed -- will not be detected by looking at the decay curves.  See section~\ref{sect: temperature control and calibration} or the \uf{relax\ufus{}data\ufsep{}temp\ufus{}calibration} user function documentation on page~\pageref{uf: relax_data.temp_calibration} and the \uf{relax\ufus{}data\ufsep{}temp\ufus{}control} user function documentation on page~\pageref{uf: relax_data.temp_control} for more details.
