--- a/docs/latex/data_model.tex
+++ b/docs/latex/data_model.tex
@@ -42,7 +42,7 @@ pipe.create(pipe_name='NOE 1200 MHz', pipe_type='noe')
 
 A number of relax operations will also create data pipes by merging a group of pipes or branching pre-existing pipes.  See section~\ref{sect: the data pipe} on page~\pageref{sect: the data pipe} for additional details.
 
-All data not associated with spin systems will be stored in the base data pipe.  This includes information such as global optimisation statistics, diffusion tensors, alignment tensors, 3D structural data, the molecule, residue and spin container data structure and the interatomic data containers.  One data pipe from the set will be defined as being the current data pipe, and all operations in relax will effect data from this pipe.  The \uf{pipe.switch} user function in all UI modes can be used to change which pipe is the current data pipe.  In the GUI, switching between analysis tabs will automatically switch the current data pipe to match the analysis being displayed.
+All data not associated with spin systems will be stored in the base data pipe.  This includes information such as global optimisation statistics, diffusion tensors, alignment tensors, 3D structural data, the molecule, residue and spin container data structure and the interatomic data containers.  One data pipe from the set will be defined as being the current data pipe, and all operations in relax will effect data from this pipe.  The \uf{pipe\ufsep{}switch} user function in all UI modes can be used to change which pipe is the current data pipe.  In the GUI, switching between analysis tabs will automatically switch the current data pipe to match the analysis being displayed.
 
 
 % Data pipe bundles.
@@ -118,7 +118,7 @@ Alternatively residues can be added in the spin viewer window from the pop up me
 
 Spin containers are nested within a residue container (again graphically depicted in the spin viewer window in figure~\ref{fig: screenshot: spin viewer} on page~\pageref{fig: screenshot: spin viewer}).  Multiple spin containers can exist per residue.  This allows, for example, a single model-free analysis simultaneously on the backbone nitrogen spins, side-chain tryptophan indole nitrogen spins and alpha carbon spins.  Or, for example, studying the pseudocontact shifts for all nitrogen, carbon and proton spins in the molecule simultaneously.
 
-Spin containers can be manually added via the \uf{spin.create} user function in the GUI or prompt/scripting mode:
+Spin containers can be manually added via the \uf{spin\ufsep{}create} user function in the GUI or prompt/scripting mode:
 
 \begin{lstlisting}
 spin.create(spin_num='200', spin_name='NE1')
@@ -156,7 +156,7 @@ Regular expression can, in some instances, be used to select spins.  For example
 \includegraphics[width=3cm, bb=0 0 1701 1701]{graphics/wizards/dipole_pair/NH_dipole_pair_600x600}
 \end{figure*}
 
-Separate from the spin containers, yet strongly linked to them, are the interatomic data containers.  These containers are grouped together within the same data pipe as the spins they point to.  These define interactions between two spins located anywhere within the molecule, residue and spin nested data structure.  These are automatically created when reading in data defined between two spins such as RDCs and NOE distance constraints.  They can also be created using the \uf{interatom.define} user function:
+Separate from the spin containers, yet strongly linked to them, are the interatomic data containers.  These containers are grouped together within the same data pipe as the spins they point to.  These define interactions between two spins located anywhere within the molecule, residue and spin nested data structure.  These are automatically created when reading in data defined between two spins such as RDCs and NOE distance constraints.  They can also be created using the \uf{interatom\ufsep{}define} user function:
 
 \begin{lstlisting}
 interatom.define(spin_id1=':2@N', spin_id2=':2@H')
@@ -205,7 +205,7 @@ spin.isotope('15N', spin_id='@N*')
 spin.isotope('1H', spin_id='@H*')
 \end{lstlisting}
 
-The \uf{structure.read\_pdb} user function will load the structural data into the current data pipe, and the \uf{structure.load\_spins} user function will create the molecule, residue, and spin containers as needed.  This will also load atomic position information into the matching spin containers.  The \uf{spin.isotope} user function is required to define the magnetic dipole-dipole interaction and is information not present in the PDB file.
+The \uf{structure\ufsep{}read\ufus{}pdb} user function will load the structural data into the current data pipe, and the \uf{structure\ufsep{}load\ufus{}spins} user function will create the molecule, residue, and spin containers as needed.  This will also load atomic position information into the matching spin containers.  The \uf{spin\ufsep{}isotope} user function is required to define the magnetic dipole-dipole interaction and is information not present in the PDB file.
 
 Note that if structural data from the PDB is used to generate the spin containers, then all subsequent data loaded into relax must follow the exact naming convention from the PDB file.  Automatic residue name matching (i.e. `GLY' = `Gly' = `gly' = `G') is currently not supported.
 
@@ -288,7 +288,7 @@ These user functions can be repeated until the full sequence has been constructe
 
 \subsection{GUI mode -- setting up the data pipe} \label{sect: GUI - data pipe}
 
-In the GUI, the most common way to create the data pipe is to initialise one of the auto-analyses via the analysis selection wizard (see Figure~\ref{fig: screenshot: analysis wizard} on page~\pageref{fig: screenshot: analysis wizard}).  The initialisation will create the appropriate starting data pipe.  Alternatively the data pipe editor can be used (see Figure~\ref{fig: screenshot: pipe editor} on page~\pageref{fig: screenshot: pipe editor}).  Or the \guimenuitemthree{User functions}{pipe}{create} menu item can be selected for graphical access to the \uf{pipe.create} user function.
+In the GUI, the most common way to create the data pipe is to initialise one of the auto-analyses via the analysis selection wizard (see Figure~\ref{fig: screenshot: analysis wizard} on page~\pageref{fig: screenshot: analysis wizard}).  The initialisation will create the appropriate starting data pipe.  Alternatively the data pipe editor can be used (see Figure~\ref{fig: screenshot: pipe editor} on page~\pageref{fig: screenshot: pipe editor}).  Or the \guimenuitemthree{User functions}{pipe}{create} menu item can be selected for graphical access to the \uf{pipe\ufsep{}create} user function.
 
 
 
