--- a/docs/latex/jw_mapping.tex
+++ b/docs/latex/jw_mapping.tex
@@ -181,7 +181,7 @@ calc()
 monte_carlo.error_analysis()
 \end{lstlisting}
 
-In this case, the \uf{monte\_carlo.initial\_values} user function call is not required.
+In this case, the \uf{monte\ufus{}carlo\ufsep{}initial\ufus{}values} user function call is not required.
 
 
 % Visualisation and data output.
@@ -189,4 +189,4 @@ In this case, the \uf{monte\_carlo.initial\_values} user function call is not re
 
 \section{J(w) mapping script mode -- visualisation and data output}
 
-The rest of the script is used to output the results to 2D Grace files for visualisation (the \uf{grace.view} user function calls will launch Grace with the created files), and the output of the values into plain text files.
+The rest of the script is used to output the results to 2D Grace files for visualisation (the \uf{grace\ufsep{}view} user function calls will launch Grace with the created files), and the output of the values into plain text files.
