--- a/docs/latex/optimisation.tex
+++ b/docs/latex/optimisation.tex
@@ -19,7 +19,7 @@
 
 \subsection{The interface}
 
-Optimisation or minimisation is available in relax via the \uf{grid\_search} and \uf{minimise} user functions.
+Optimisation or minimisation is available in relax via the \uf{grid\ufus{}search} and \uf{minimise} user functions.
 The mathematical model optimised depends on the current data pipe type -- it is implemented differently for each specific analysis.
 For analyses such as the steady state NOE (Chapter~\ref{ch: NOE}) or reduced spectral density mapping (Chapter~\ref{ch: J(w) mapping}), the solution can be found by direct calculation rather than optimisation.
 In these cases, the \uf{calc} user function should be used instead.
